File overlap fixing

--- a/styles/integrity_style.css
+++ b/styles/integrity_style.css
@@ -253,7 +253,7 @@ strong {
 .top h1{
     text-align: center;
     color: #ffffff;
-    background:rgba(0,0,0,0.1);
+
 }
 .bottom{
 
